--- a/public/assets/web/ASSets/css/shop.css
+++ b/public/assets/web/ASSets/css/shop.css
@@ -35,7 +35,8 @@
   gap: clamp(0px, 2.083333333333333vw, 40px);
 
   .filters-container {
-    width: clamp(0px, 15.729166666666666vw, 302px);
+    width: clamp(250px, 15.729166666666666vw, 302px);
+    
     display: flex;
     flex-direction: column;
     align-items: start;
@@ -79,8 +80,8 @@
 
         span {
           font-family: Alexandria;
-          font-size: 16px;
-          font-weight: 400;
+          font-size: clamp( 12px, 0.8333333333333334vw, 16px);
+          font-weight: 700;
           line-height: 10px;
           color: #fd9636;
         }
@@ -120,11 +121,13 @@
             gap: 10px;
 
             span {
-              font-family: Alexandria;
-              font-size: 14px;
-              font-weight: 300;
-              line-height: 22px;
-              color: #000;
+              a{
+                font-family: Alexandria;
+                font-size: clamp( 10px, 0.7291666666666666vw, 14px);
+                font-weight: 700;
+                line-height: 22px;
+                color: #000;
+              }
             }
           }
 
@@ -254,6 +257,14 @@
               border-radius: 50%;
             }
 
+            span{
+              font-family: Alexandria;
+              font-size: 11px;
+              font-weight: 700;
+              line-height: 20px;
+              color: #475156;
+            }
+
             .priceCircle.active {
               border: 3px solid #fd9636;
             }
@@ -291,8 +302,8 @@
 
           span {
             font-family: Alexandria;
-            font-size: 16px;
-            font-weight: 400;
+            font-size: clamp( 12px, 0.8333333333333334vw, 16px);
+            font-weight: 700;
             line-height: 10px;
             color: #fd9636;
           }
@@ -339,7 +350,7 @@
         width: 100%;
         align-items: start;
         justify-content: start;
-        padding: 16px 20px;
+        padding: clamp( 12px, 0.8333333333333334vw, 16px) clamp( 14px, 1.0416666666666665vw, 20px);
         gap: 15px;
 
         .catigoryCollapceItem {
@@ -359,20 +370,20 @@
             border: none;
             outline: none;
             background: transparent;
-            padding: 16px 20px;
-            gap: 16px;
+            padding: clamp( 12px, 0.8333333333333334vw, 16px) clamp( 14px, 1.0416666666666665vw, 20px);
+            gap: clamp( 12px, 0.8333333333333334vw, 16px);
             border: 1px solid #f1f1f2;
             border-radius: 6px;
 
             .collapseHead {
               display: flex;
-              align-items: start;
+              align-items: center;
               justify-content: start;
-              gap: 11px;
+              gap: clamp( 8px, 0.5729166666666666vw, 11px);
 
               .priceCircle {
-                width: 26px;
-                height: 26px;
+                width: clamp( 20px, 1.3541666666666667vw, 26px);
+                height: clamp( 20px, 1.3541666666666667vw, 26px);
                 border: 3px solid #e1e3ea;
                 border-radius: 50%;
               }
@@ -385,8 +396,8 @@
 
                 span {
                   font-family: Alexandria;
-                  font-size: 14px;
-                  font-weight: 500;
+                  font-size: clamp( 10px, 0.7291666666666666vw, 14px);
+                  font-weight: 700;
                   line-height: 18px;
                   color: #000;
                 }
@@ -893,6 +904,7 @@
     @media (max-width: 576px) {
       .shop-products {
         .product-card {
+          width: 48%;
           .flash-save-offer {
             width: 45px;
             height: 43px;
