--- a/public/assets/web/ASSETS_En/css/STYLEeN9.css
+++ b/public/assets/web/ASSETS_En/css/STYLEeN9.css
@@ -4332,13 +4332,13 @@ body.dark .form-control {
 }
 
 .burger-icon {
-  position: absolute;
-  width: 24px;
-  height: 20px;
+  /* position: absolute; */
+  /* width: 24px;
+  height: 20px; */
   cursor: pointer;
   transition: all 0.25s cubic-bezier(0.645, 0.045, 0.355, 1);
-  top: 15px;
-  right: 0px;
+  /* top: 15px;
+  right: 0px; */
   z-index: 1004;
 }
 .burger-icon > span {
@@ -11280,6 +11280,7 @@ a:hover span {
     width: 33.3333333%;
   }
 }
+
 @media (max-width: 768px) {
   #vertical-banner {
     display: none;
@@ -11296,9 +11297,6 @@ a:hover span {
   }
 }
 @media (max-width: 570px) {
-  #logo {
-    margin-left: 15px;
-  }
   #component_product {
     width: 50%;
   }
@@ -14258,7 +14256,7 @@ a:hover span {
               justify-content: start;
               font-family: Alexandria;
               font-size: clamp(10px, 0.8333333333333334vw, 16px);
-              font-weight: 300;
+              font-weight: 700;
               line-height: clamp(12px, 0.9895833333333333vw, 19px);
               color: #8c9ec5;
               gap: 10px;
@@ -14274,7 +14272,7 @@ a:hover span {
                   color: #a5b2cd !important;
                   font-family: Alexandria;
                   font-size: clamp(8px, 0.7291666666666666vw, 14px);
-                  font-weight: 300;
+                  font-weight: 700;
                   line-height: clamp(9px, 0.8854166666666666vw, 17px);
                 }
               }
