--- a/public/assets/web/ASSets/css/header.css
+++ b/public/assets/web/ASSets/css/header.css
@@ -204,6 +204,18 @@
 .header {
   .container {
     .main-header {
+      .burger-icon{
+        div{
+          width: 34px;
+          height: 34px;
+          box-shadow: 0px 0px 4px 0px #00000040;
+          border-radius: 8px;
+          display: flex;
+          align-items: center;
+          justify-content: center;
+          margin: auto;
+        }
+      }
       .header-left {
         justify-content: space-between;
 
