--- a/public/assets/web/ASSets/css/product-details.css
+++ b/public/assets/web/ASSets/css/product-details.css
@@ -61,7 +61,7 @@
         flex-direction: column;
         width: 100%;
         padding: clamp(5px, 1.09375vw, 21px)
-        clamp(5px, 1.1979166666666667vw, 23px);
+          clamp(5px, 1.1979166666666667vw, 23px);
         border: 1px solid #f1f1f2;
         box-shadow: 0px 3px 4px 0px #00000008;
         border-radius: 12px;
@@ -72,31 +72,49 @@
 
           img {
             width: 100%;
+            border-radius: 12px;
           }
         }
 
-        .small-images {
-          display: flex;
-          align-items: center;
-          justify-content: center;
-          gap: clamp(7px, 0.6770833333333334vw, 13px);
-          margin-top: clamp(0px, 0.625vw, 12px);
+        .small-imgs{
+          overflow: auto;
+          width: 100%;
 
-          .small-img {
+          .small-images {
             display: flex;
             align-items: center;
             justify-content: center;
-            border-radius: 12px;
-            overflow: hidden;
-            width: calc((100% - (3 * clamp(0px, 0.625vw, 12px))) / 4);
-            cursor: pointer;
-            height: fit-content;
-            margin: 0;
+            gap: clamp(7px, 0.6770833333333334vw, 13px);
+            width: fit-content;
+            
+            .small-img {
+              display: flex;
+              align-items: center;
+              justify-content: center;
+              border-radius: 12px;
+              overflow: hidden;
+              width: calc((100% - (3 * clamp(0px, 0.625vw, 12px))) / 4);
+              cursor: pointer;
+              height: fit-content;
+              margin: 0;
+              min-width: clamp( 100px, 7.8125vw, 150px);
 
-            img {
-              width: 100%;
+              img {
+                width: 100%;
+                border-radius: 12px;
+              }
             }
           }
+        }
+
+
+        .small-imgs {
+          scrollbar-width: none; 
+          -ms-overflow-style: none; 
+        }
+        
+        .small-imgs::-webkit-scrollbar {
+          display: none; 
         }
       }
 
